elasticsearch-kibana/template/03b-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elasticsearch-kibana
  labels:
    app: elasticsearch
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: elasticsearch.mgmt.tkg-vsp-lab.hyrulelab.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
           name: elasticsearch
           port:
             number: 9200
